--- a/style.css
+++ b/style.css
@@ -422,6 +422,12 @@ footer svg:hover {
   gap: 1rem;
 }
 
+@media (max-width: 485px) {
+  .about-work{
+    flex-direction: column;
+  }
+}
+
 /* ABOUT ME PAGE */
 
 
@@ -646,17 +652,24 @@ footer svg:hover {
 }
 
 .skills-container > div{
+  position: relative;
   display: grid;
   align-items: center;
   justify-items: center;
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 50px 1fr 1fr ;
   background-color: #03111e;
-  border-radius: 10px;
+  border-radius: 20px;
   color: #ffffff;
-  border: 1px solid rgba(52, 116, 205, 0.629);
+  border: 1px solid #0c9db778;
   transition: all .5s;
+  cursor: pointer;
 }
+.skills-container > div:hover{
+  box-shadow: 0px 0px 20px 1px #0c9db778;
+  border: 1px solid rgba(208, 210, 211, 0.454);
+}
+
 
 
 .skills-container h3{
