refactor nav aboutme page

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@
 
 }
 
-.area-aboutme{
+.background-aboutme{
   background-color: rgb(3, 43, 84);  
   background: -webkit-linear-gradient(to bottom, rgba(48, 50, 51, 0.86), #0b0d0f);  
   width: 100%;
