--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@
 
 }
 
-.area-projects{
+.background-projects{
   background-color: #420f0f;  
   background: -webkit-linear-gradient(to bottom, rgba(48, 50, 51, 0.86), #0b0d0f);  
   width: 100%;
